test/functions/iterators/bradc/badzip/misZipArrays.good
misZipArrays.chpl:17: error: illegal tuple variable declaration with non-tuple initializer
